# opencode-clone

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/: .env.example  README.md  database.py  license.py  main.py  pyproject.toml  render.yaml  requirements.txt  setup_stripe.py
backend/routes/: checkout.py  license.py  webhooks.py
skills/: api-design.md  database-design.md  deploy-check.md  react-testing.md  security-audit.md
src/: agent.py  config.py  context.py  license.py  llm.py
src/tools/: __init__.py  base.py  bash.py  files.py  git.py  github.py  learn.py  project.py  question.py  skill.py  spawn.py  todo.py  verify.py  web.py
web/: checkout.html
